<resources>
    <string name="app_name">Smart Fitness</string>

    <string name="Train_name1">Training One Level</string>

    <string name="tw_workout_prog">Workout programm on 2 week</string>

    <string name="b_first_train">First workout </string>
    <string name="b_two_train">Two  workout</string>
    <string name="b_three_train">Three  workout</string>
    <string name="b_four_train">Four workout</string>
    <string name="b_five_train">Five workout</string>
    <string name="b_six_train">Six workout</string>

    <string name="b_sw_train_done">Complete workout</string>

    <string name="proga1">задания на 2 недели: %1$d \n
1. отжимания лесенкой с 1 повторения до \n
2. подтягивания лесенкой с 1 повторения до \n
3. Приседания 4 подхода до максимума \n
4. Пресс 4 подхода до максимума с удержанием корпуса на половину 20 градусах на 10 секунд \n
5. Экстензия 4 подхода до максимума с удержнием позиции на 10 секунд \n
в конце второй недели пройдите новое тестирование</string>
    <string name="block1">to do all</string>
    <string name="block2">hyperextension</string>
    <string name="block3">abc</string>
    <string name="block4">squad</string>
    <string name="block5">pullups</string>
    <string name="block6">pushups</string>
    <string name="block7">hyperextension and abc</string>
    <string name="block8">hyperextension and pullups</string>
    <string name="block9">hyperextension and squat</string>
    <string name="block10">squat and abc</string>
    <string name="block11">hyperextension and pushups</string>
    <string name="block12">pushups and squat</string>
    <string name="block13">pushups and pullups</string>
    <string name="block14">подтягивания пресс</string>
    <string name="block15">pushups and abc</string>
    <string name="block16">подтягивания приседания</string>
    <string name="block17">приседания пресс экстензия</string>
    <string name="block18">подтягивания пресс экстензия</string>
    <string name="block19">делай подтягивания приседания и экстензия</string>
    <string name="block20">делай подтягивания приседания и пресс</string>
    <string name="block21">делай отжимания пресс и экстензия</string>
    <string name="block22">делай отжимания приседания и экстензия</string>
    <string name="block23">делай отжимания приседания пресс</string>
    <string name="block24">делай отжимания подтягивания и экстензия</string>
    <string name="block25">делай отжимания подтягивнаия и пресс</string>
    <string name="block26">делай отжимания подтягивания и приседания</string>
    <string name="block27">делай отжимания поджтягивания приседания и пресс</string>
    <string name="block28">делай отжимания подтягивания приседания и экстензия</string>
    <string name="block29">делай отжимания подтягивания пресс и экстензия</string>
    <string name="block30">делай отжимания приседания пресс и экстензия</string>
    <string name="block31">делай подтягивания приседания пресс и кстензия</string>


</resources>