<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/tv_logo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:text="SmartTrain"
        android:textSize="40sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/ll_ofp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:visibility="visible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_logo">

        <TextView
            android:id="@+id/tv_push_info"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="отжимания" />

        <EditText
            android:id="@+id/et_push"
            android:layout_width="119dp"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="за минуту"
            android:inputType="number" />

        <TextView
            android:id="@+id/tv_pull_info"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="подтягивания" />

        <EditText
            android:id="@+id/et_pull"
            android:layout_width="118dp"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="за минуту"
            android:inputType="number" />

        <TextView
            android:id="@+id/tv_squat_info"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="приседания" />

        <EditText
            android:id="@+id/et_squad"
            android:layout_width="119dp"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="за минуту"
            android:inputType="number" />

        <TextView
            android:id="@+id/tv_abc_info"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="пресс" />

        <EditText
            android:id="@+id/et_abc"
            android:layout_width="118dp"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="за минуту"
            android:inputType="number" />

        <TextView
            android:id="@+id/tv_exten_info"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="гиперэкстензия" />

        <EditText
            android:id="@+id/et_exten"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="за минуту"
            android:inputType="number" />

        <Button
            android:id="@+id/b_result_ofp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="onClickResult"
            android:text="Анализ" />
    </LinearLayout>

    <ScrollView
        android:id="@+id/sw_train"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="invisible"
        app:layout_constraintTop_toBottomOf="@+id/tv_logo"
        tools:layout_editor_absoluteX="193dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tv_train"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="TextView" />

            <TextView
                android:id="@+id/tv_pushup"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="TextView" />

            <TextView
                android:id="@+id/tv_pull"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="TextView" />

            <TextView
                android:id="@+id/tv_squat"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="TextView" />

            <TextView
                android:id="@+id/tv_abc"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="TextView" />

            <TextView
                android:id="@+id/tv_exten"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="TextView" />

            <Button
                android:id="@+id/b_sw_train_done"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="b_sw_train_done_onClick"
                android:text="@string/b_sw_train_done" />
        </LinearLayout>
    </ScrollView>

    <LinearLayout
        android:id="@+id/ll_workout_programmm"
        android:layout_width="144dp"
        android:layout_height="509dp"
        android:layout_marginTop="20dp"
        android:orientation="vertical"
        android:visibility="invisible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_logo">

        <TextView
            android:id="@+id/tv_workout_prog"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/tw_workout_prog" />

        <Button
            android:id="@+id/b_first_train"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="first_onClick"
            android:text="@string/b_first_train" />

        <Button
            android:id="@+id/b_two_train"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="two_onClick"
            android:text="@string/b_two_train" />

        <Button
            android:id="@+id/b_three_train"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="three_onClick"
            android:text="@string/b_three_train" />

        <Button
            android:id="@+id/b_four_train"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="four_onClick"
            android:text="@string/b_four_train" />

        <Button
            android:id="@+id/b_five_train"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="five_onClick"
            android:text="@string/b_five_train" />

        <Button
            android:id="@+id/b_six_train"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="six_onClick"
            android:text="@string/b_six_train" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>